Bugfix: on mobile, entry stays at left side because mobile is 959px and max-width of entry is 760px; make it fully stretched

--- a/sass/mixins/_mixins.scss
+++ b/sass/mixins/_mixins.scss
@@ -92,7 +92,8 @@ Everything here can be applied site-wide.
   margin: 0 auto;
   max-width: $onecolumn-maxwidth;
   @media (max-width: $mobile-max) {
-    margin: 0 $spacing;
+		margin: 0 $spacing;
+		max-width: $mobile-max;
   }
 }
 
